@@ -644,6 +644,9 @@ Trunk (unreleased changes)
     HDFS-2228. Move block and datanode code from FSNamesystem to
     BlockManager and DatanodeManager.  (szetszwo)
 
+    HDFS-2238. In NamenodeFsck.toString(), uses StringBuilder.(..) instead of
+    string concatenation.  (Uma Maheswara Rao G via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
